src/assets/main.css
body {
    background-color: #ddd;
    height: 100dvh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.app {
    width: 800px;
    height: 720px;
    background-color: #fff;
    border: 2px solid #ccc;
    border-radius: 20px;
}

.app header, .app footer {
    height: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.app header button {
    cursor: pointer;
    font-size: 16px;
    background-color: #ddd;
    border: none;
    border-radius: 4px;
    padding: 8px 16px;
    margin: 0 8px;
}

.app header button:hover:not(:active) {
    box-shadow: 0px 1px 4px #888;
}

.app footer input {
    cursor: pointer;
    width: 200px;
    border: none;
    border-radius: 4px;
    margin: 0 8px;
    padding: 0;
}

.app main {
    height: 600px;
    border: 1px solid #ddd;
    border-width: 1px 0;
}

.app main canvas {
    width: 100%;
    height: 100%;
}

